# ElvAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  :memory:  IMPLEMENTATION_PROGRESS.md  INSTAGRAM_QUICK_START.md  PROJECT_STRUCTURE.md  README.md  START_HERE.md  STATUS.md  TELEGRAM_SETUP.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md
.claude/agents/: content-researcher.md  test-planner.md
.github/workflows/: auto-pr.yml  ci.yml
docs/: INSTAGRAM_SETUP.md  PIPELINE_IMPLEMENTATION.md  PUBLISHING_LAYER_IMPLEMENTATION.md  README.md  STATUS.md  TESTING_GUIDE.md
docs/logs/: 2026-02-16-session-1.md  2026-02-16-session-2.md  2026-02-17-session-1.md  2026-02-17-session-2.md  2026-02-18-session-1.md  2026-02-18-session-2.md  2026-02-19-session-1.md  2026-02-19-session-2.md  2026-02-19-session-3.md  2026-02-19-session-4.md  2026-02-19-session-5.md  2026-02-19-session-6.md  2026-02-19-session-7.md  2026-02-19-session-8.md  2026-02-20-session-1.md  2026-02-22-session-1.md  README.md
scripts/: elvagent.service  setup_systemd.sh  test_content_enhancer_real.py  test_enhanced_telegram.py  test_foundation.py  test_full_pipeline_telegram.py  test_full_pipeline_twitter.py  test_huggingface.py  test_instagram.py  test_mcp_server.py  test_multi_source.py  test_orchestrator_enhanced.py  test_publishers.py  test_reddit.py  test_techcrunch.py  test_telegram.py  test_telegram_auto.py  test_twitter.py
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  newsletter_agent.py  task_worker.py  telegram_agent.py
src/config/: constants.py  settings.py
tests/: conftest.py
(+92 files in other folders)
