[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "elvagent"
version = "0.1.0"
description = "Autonomous AI newsletter agent"
requires-python = ">=3.10"

[tool.pytest.ini_options]
# Test discovery patterns
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test paths
testpaths = ["tests"]

# Output options
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]

# Markers for categorizing tests
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require database, APIs)",
    "slow: Slow tests (research, external APIs)",
    "requires_api: Tests that require API keys",
    "requires_network: Tests that require network access",
]

# Asyncio configuration
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["scripts/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ASYNC"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"tests/integration/test_full_pipeline.py" = ["ASYNC240"]
"src/publishing/instagram_publisher.py" = ["ASYNC230"]
"scripts/*" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
